SERVER-65925 Reshard commit and abort should check for transient errors when joining