src/mongo/db/s/shardsvr_abort_reshard_collection_command.cpp
@@ -93,7 +93,7 @@ public:
             }
 
             for (auto doneFuture : futuresToWait) {
-                doneFuture.wait(opCtx);
+                doneFuture.get(opCtx);
             }
 
             // If abort actually went through, the resharding documents should be cleaned up.
